--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@types/lodash": "^4.14.202",
     "axios": "^1.6.5",
     "floating-vue": "^2.0.0-beta.24",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
+    "sweetalert2": "^11.10.3",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
