--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite --host 0.0.0.0",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -17,13 +17,20 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/pro-duotone-svg-icons": "^6.5.2",
+    "@fortawesome/pro-light-svg-icons": "^6.5.2",
+    "@fortawesome/pro-regular-svg-icons": "^6.5.2",
+    "@fortawesome/pro-solid-svg-icons": "^6.5.2",
+    "@fortawesome/pro-thin-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@types/lodash": "^4.14.202",
+    "@vueuse/core": "^10.9.0",
     "axios": "^1.6.5",
     "floating-vue": "^2.0.0-beta.24",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.3",
+    "validator": "^13.11.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
@@ -32,6 +39,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.19.3",
+    "@types/validator": "^13.11.9",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
