--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,6 +8,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "target": "ES5",
+    "experimentalDecorators": true
   }
 }
