--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.5",
     "floating-vue": "^2.0.0-beta.24",
+    "hangul-util": "^0.1.4",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.3",
