--- a/package.json
+++ b/package.json
@@ -11,32 +11,37 @@
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "generate-type": "npx @rmp135/sql-ts -c ./mysql.json"
+    "gt": "node generate-types.js && eslint --fix src/@types/models.d.ts"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/pro-duotone-svg-icons": "^6.5.2",
     "@fortawesome/pro-light-svg-icons": "^6.5.2",
     "@fortawesome/pro-regular-svg-icons": "^6.5.2",
     "@fortawesome/pro-solid-svg-icons": "^6.5.2",
     "@fortawesome/pro-thin-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@rmp135/sql-ts": "^2.1.0",
     "@types/lodash": "^4.14.202",
+    "@types/qs": "^6.9.15",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.11",
     "floating-vue": "^2.0.0-beta.24",
+    "graphql": "^16.8.1",
     "hangul-util": "^0.1.4",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
+    "qs": "^6.12.1",
     "sweetalert2": "^11.10.3",
     "validator": "^13.11.0",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.6.6"
   },
   "devDependencies": {
-    "@rmp135/sql-ts": "^1.18.1",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.19.3",
@@ -52,6 +57,8 @@
     "prettier": "^3.0.3",
     "sass": "^1.69.7",
     "typescript": "~5.3.0",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-vue-components": "^0.27.0",
     "vite": "^5.0.10",
     "vue-tsc": "^1.8.25"
   }
