--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@rmp135/sql-ts": "^2.1.0",
     "@types/lodash": "^4.14.202",
     "@types/qs": "^6.9.15",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.5",
     "dayjs": "^1.11.11",
@@ -37,8 +39,8 @@
     "qs": "^6.12.1",
     "sweetalert2": "^11.10.3",
     "validator": "^13.11.0",
-    "vue": "^3.3.11",
-    "vue-router": "^4.2.5",
+    "vue": "^3.4.35",
+    "vue-router": "^4.4.0",
     "vuetify": "^3.6.6"
   },
   "devDependencies": {
