--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "gt": "node generate-types.js && eslint --fix src/@types/models.d.ts"
+    "gt": "npx tsx generate-types.ts && eslint --fix src/@types/models.d.ts"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
