--- a/default.conf.template
+++ b/default.conf.template
@@ -1,9 +1,15 @@
 server {
     listen 80;
 
-    location /app/ {
+    location / {
+        alias /usr/share/nginx/html/;
+        try_files $uri $uri/ /index.html;
+    }
+    
+    location /api {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $remote_addr;
+
         proxy_pass http://${API_IP}:${API_PORT};
     }
 }
