--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.5",
-    "dayjs": "^1.11.11",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "floating-vue": "^2.0.0-beta.24",
     "graphql": "^16.8.1",
     "hangul-util": "^0.1.4",
