feat: router path layout 설정 수정 feat: 주문내역 화면 수정 기능 추가

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "hangul-util": "^0.1.4",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "qs": "^6.12.1",
     "sweetalert2": "^11.10.3",
     "validator": "^13.11.0",
