--- a/package.json
+++ b/package.json
@@ -54,12 +54,15 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "mysql2": "^3.7.0",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.41",
     "prettier": "^3.0.3",
     "sass": "^1.69.7",
+    "tailwindcss": "^3.4.10",
     "typescript": "~5.3.0",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
