--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.6.5",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
+    "dotenv": "^16.4.5",
     "floating-vue": "^2.0.0-beta.24",
     "graphql": "^16.8.1",
     "hangul-util": "^0.1.4",
