--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/qs": "^6.9.15",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "@vuepic/vue-datepicker": "^9.0.2",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.5",
     "date-fns": "^3.6.0",
