--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.41",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "sass": "^1.69.7",
     "tailwindcss": "^3.4.10",
     "typescript": "~5.3.0",
