--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pinia-plugin-persistedstate": "^3.2.1",
     "qs": "^6.12.1",
     "sweetalert2": "^11.10.3",
+    "uuid": "^10.0.0",
     "validator": "^13.11.0",
     "vue": "^3.4.35",
     "vue-draggable-next": "^2.2.1",
@@ -54,6 +55,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.19.3",
+    "@types/uuid": "^10.0.0",
     "@types/validator": "^13.11.9",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^8.0.0",
