--- a/package.json
+++ b/package.json
@@ -70,6 +70,10 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "sass": "^1.69.7",
+    "stylelint": "^16.9.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-config-tailwindcss": "^0.0.7",
     "tailwindcss": "^3.4.10",
     "typescript": "~5.3.0",
     "unplugin-auto-import": "^0.17.6",
