--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "vue-draggable-resizable": "^3.0.0",
     "vue-grid-layout": "^2.4.0",
     "vue-router": "^4.4.0",
+    "vue-select": "^4.0.0-beta.6",
     "vuetify": "^3.6.6"
   },
   "devDependencies": {
@@ -57,6 +58,7 @@
     "@types/node": "^18.19.3",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.11.9",
+    "@types/vue-select": "^3.16.8",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
