--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pinia-plugin-persistedstate": "^3.2.1",
     "qs": "^6.12.1",
     "sweetalert2": "^11.10.3",
+    "tree-crawl": "^1.2.2",
     "uuid": "^10.0.0",
     "validator": "^13.11.0",
     "vue": "^3.4.35",
