--- a/package.json
+++ b/package.json
@@ -42,25 +42,27 @@
     "pinia-plugin-persistedstate": "^3.2.1",
     "qs": "^6.12.1",
     "sweetalert2": "^11.10.3",
+    "tailwindcss": "^3.4.10",
     "tree-crawl": "^1.2.2",
     "uuid": "^10.0.0",
     "validator": "^13.11.0",
-    "vue": "^3.4.35",
+    "vue": "^3.5.13",
     "vue-draggable-next": "^2.2.1",
     "vue-draggable-resizable": "^3.0.0",
     "vue-grid-layout": "^2.4.0",
-    "vue-router": "^4.4.0",
+    "vue-router": "^4.5.0",
     "vue-select": "^4.0.0-beta.6",
     "vuetify": "^3.6.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
+    "@tailwindcss/postcss": "^4.0.0",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.19.3",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.11.9",
     "@types/vue-select": "^3.16.8",
-    "@vitejs/plugin-vue": "^4.5.2",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.0",
@@ -77,11 +79,10 @@
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-config-tailwindcss": "^0.0.7",
-    "tailwindcss": "^3.4.10",
-    "typescript": "~5.3.0",
+    "typescript": "^5.7.3",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
-    "vite": "^5.0.10",
-    "vue-tsc": "^1.8.25"
+    "vite": "^6.0.11",
+    "vue-tsc": "^2.2.0"
   }
 }
