--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@vuelidate/validators": "^2.0.4",
     "@vuepic/vue-datepicker": "^9.0.2",
     "@vueuse/core": "^10.9.0",
-    "axios": "^1.6.5",
+    "axios": "^1.9.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
@@ -38,8 +38,8 @@
     "graphql": "^16.8.1",
     "hangul-util": "^0.1.4",
     "lodash": "^4.17.21",
-    "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^3.2.1",
+    "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "qs": "^6.12.1",
     "sweetalert2": "^11.10.3",
     "tailwindcss": "^3.4.10",
@@ -56,9 +56,10 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.0.0",
     "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^18.19.3",
+    "@types/node": "^18.19.95",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.11.9",
     "@types/vue-select": "^3.16.8",
@@ -79,10 +80,11 @@
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-config-tailwindcss": "^0.0.7",
+    "tailwind-merge": "^3.2.0",
     "typescript": "^5.7.3",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
-    "vite": "^6.0.11",
+    "vite": "^6.3.5",
     "vue-tsc": "^2.2.0"
   }
 }
