--- a/package.json
+++ b/package.json
@@ -29,25 +29,25 @@
     "@types/qs": "^6.9.15",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
-    "@vuepic/vue-datepicker": "^9.0.2",
+    "@vuepic/vue-datepicker": "^11.0.2",
     "@vueuse/core": "^10.9.0",
-    "axios": "^1.9.0",
+    "axios": "^1.12.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
-    "floating-vue": "^2.0.0-beta.24",
+    "floating-vue": "^5.2.2",
     "graphql": "^16.8.1",
     "hangul-util": "^0.1.4",
     "lodash": "^4.17.21",
-    "pinia": "^3.0.2",
-    "pinia-plugin-persistedstate": "^4.3.0",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "qs": "^6.12.1",
     "sweetalert2": "^11.10.3",
     "tailwindcss": "^3.4.10",
     "tree-crawl": "^1.2.2",
     "uuid": "^10.0.0",
     "validator": "^13.11.0",
-    "vue": "^3.5.13",
+    "vue": "^3.5.21",
     "vue-draggable-next": "^2.2.1",
     "vue-draggable-resizable": "^3.0.0",
     "vue-grid-layout": "^2.4.0",
@@ -60,32 +60,32 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.0.0",
     "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^18.19.95",
+    "@types/node": "^24.3.3",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.11.9",
     "@types/vue-select": "^3.16.8",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.5.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint": "^9.35.0",
+    "eslint-plugin-vue": "^10.4.0",
     "mysql2": "^3.7.0",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.41",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "sass": "^1.69.7",
     "stylelint": "^16.9.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-config-tailwindcss": "^0.0.7",
     "tailwind-merge": "^3.2.0",
-    "typescript": "^5.7.3",
-    "unplugin-auto-import": "^0.17.6",
-    "unplugin-vue-components": "^0.27.0",
-    "vite": "^6.3.5",
-    "vue-tsc": "^2.2.0"
+    "typescript": "^5.9.2",
+    "unplugin-auto-import": "^20.1.0",
+    "unplugin-vue-components": "^29.0.0",
+    "vite": "^7.1.5",
+    "vue-tsc": "^3.0.7"
   }
 }
