--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write src/",
     "gt": "npx tsx generate-types.ts && eslint --fix src/@types/models.d.ts"
   },
