--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "pinia-plugin-persistedstate": "^4.5.0",
     "qs": "^6.12.1",
     "sweetalert2": "^11.10.3",
-    "tailwindcss": "^3.4.10",
     "tree-crawl": "^1.2.2",
     "uuid": "^10.0.0",
     "validator": "^13.11.0",
@@ -58,8 +57,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.1.13",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^24.3.3",
     "@types/uuid": "^10.0.0",
@@ -83,6 +81,7 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-config-tailwindcss": "^0.0.7",
     "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "unplugin-auto-import": "^20.1.0",
     "unplugin-vue-components": "^29.0.0",
