--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/vite": "^4.1.13",
+    "@tailwindcss/postcss": "^4.1.13",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^24.3.3",
     "@types/uuid": "^10.0.0",
@@ -73,7 +73,7 @@
     "eslint-plugin-vue": "^10.4.0",
     "mysql2": "^3.7.0",
     "npm-run-all2": "^6.1.1",
-    "postcss": "^8.4.41",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "sass": "^1.69.7",
