feat: 패키지 최신화

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,6 +13,7 @@
         "eslint.config.ts",
         "tailwind.config.ts",
         "vite.config.ts",
+        "eslint.conifg.ts",
         "public/data"
     ],
     "exclude": ["src/**/__tests__/*"],
